--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dependencies": {
         "axios": "^0.19.2",
         "express": "^4.17.1",
-        "path": "^0.12.7"
+        "path": "^0.12.7",
+        "redis": "^2.8.0"
     },
     "devDependencies": {
         "chalk": "^3.0.0",
